ags (0.7.133)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing reset of connection editor field of machine

ags (0.7.132)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented seperator within AgsLine and AgsEffectLine
	* implemented seemless mode of AgsDial
	* improved theme, dial style to have dark background

ags (0.7.131)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented output listing editor to assign soundcard
	* improved theme and disable option

ags (0.7.130)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved stability

ags (0.7.129)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags-simple.xsl
	* improved mutices in ags_pad_play() and ags_line_channel_done_callback()
	* fixed missing persisting of machine name

ags (0.7.128)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsLv2OptionManager
	* implemented passing options for AgsRecallLv2Run
	* modified UI to show visualization widgets for plugin output ports
	* modified ags-peak, ags-volume and ags-mute recalls to use float ports
	* disabled loading automation of output ports
	* fixed buggy code in ags_machine_selector_remove_index() by a work-around has a need for refactoring

ags (0.7.127)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented LV2UI related code to do idle and show interface
	* improved splash picture to refresh frequently

ags (0.7.126)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved mutices for recalls
	* improved AGS_THREAD_INTERMEDIATE_POST_SYNC
	* disabled ags_main_loop_interrupt() in ags_jack_client_process_callback()

ags (0.7.125)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash in ags_jack_midiin_port_free() NULL pointer access
	* improved mutices doing playback

ags (0.7.124)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]